[package]
name = "next-web-utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
md5 = "0.7.0"
rand = "0.8.5"
chrono = "0.4.38"
regex = "1.10.4"
dirs = "5.0.1"
sysinfo = "0.33.1"
captcha-rs = {version = "0.2.11", optional = true }
notify = { version = "8.0.0", optional = true }

fast_qr = {version = "0.12.7", features = ["image", "svg"]}

once_cell = {workspace = true}

[features]
default = ["notify", "captcha"]
watch = ["notify"]
captcha = ["captcha-rs"]
