[package]
name = "next-web-utils"
version = "0.1.0"
edition = "2021"
description = "Web Utils"
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
md5 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
md2 = { workspace = true, optional = true }

rand = { workspace = true}
chrono = { workspace = true}
regex = { workspace = true}
once_cell = {workspace = true}

fastrand = "2.3.0"
dirs = "5.0.1"
sysinfo = "0.33.1"
captcha-rs = {version = "0.2.11", optional = true }
notify = { version = "8.0.0", optional = true }
fast_qr = { version = "0.12.7", features = ["image", "svg"] , optional = true}
image = {version = "0.24", optional = true}
bardecoder = {version = "0.5", optional = true }

[features]
default = ["notify", "captcha", "hash"]
watch = ["notify"]
captcha = ["captcha-rs"]
hash = ["md5", "sha1", "sha2", "md2"]
qr-code = ["fast_qr", "image", "bardecoder"]