[package]
name = "next-web-websocket"
version = "0.1.0"
description = "Next Web Websocket"
edition.workspace = true
authors.workspace = true
license.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }

serde = { workspace = true }
rudi-dev = { workspace = true} 
tracing = { workspace = true }
futures = {  workspace =  true}
flume = { workspace = true }
matchit = {  workspace = true }
tokio = { workspace = true}

next-web-core = {  workspace = true }

[lints]
workspace = true