[package]
name = "next-web-wechat"
version = "0.1.0"
description = "Secondary encapsulation of Axum ws features"
license.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
readme.workspace = true


[dependencies]
rudi = { workspace = true }
next-web-core = { workspace = true }

aes = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
base64 = { workspace = true }
serde_repr = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

cbc = { version = "^0.1.2", features = ["alloc"] }
hmac = { workspace = true }

[features]
default = ["official-account"]
official-account = [
    "official-account-menu",
    "official-account-message",
    "official-account-subscribe",
    "official-account-user-management",
    "official-account-customer-service",
]
official-account-menu = []
official-account-message = []
official-account-subscribe = []
official-account-user-management = []
official-account-customer-service = []
