[workspace]
resolver = "2"
members = ["rudi-dev",  "rudi-macro-dev"]

[workspace.package]
version = "0.8.3"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/rudi"
repository = "https://github.com/ZihanType/rudi"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"

[workspace.dependencies]
# self
rudi-dev = { version = "0.8.3", path = "./rudi-dev", default-features = false }
rudi-macro-dev = { version = "0.1.0", default-features = false }
rudi-core = { version = "0.1.0" }

# dependencies
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
from-attr = { version = "0.1", default-features = false }

# optional dependencies
inventory = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }

# dev dependencies
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
async-trait = { version = "0.1", default-features = false }
poem = { version = "3", default-features = false }
poem-openapi = { version = "5", default-features = false }
axum = { version = "0.7", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
] }
leptos = { version = "0.7", default-features = false }

serde = { version = "1.0.219", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
private_interfaces = "deny"
private_bounds = "deny"
unreachable_pub = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
