[package]
name = "next-web-data-database"
version = "0.1.0"
edition = "2024"
description = "Next Web Data Database"
readme = "README.md"
keywords = ["next-web", "database", "rbatis"]
license.workspace = true

[dependencies]
next-web-core = { workspace = true }
next-web-macros = { workspace = true }
rudi-dev = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true}

rbs = { workspace = true }
rbatis = { workspace = true }
rbdc = { workspace = true, default-features = false }
rbdc-pg = { workspace = true, optional = true }
rbdc-mysql = { workspace = true, optional = true }
rbdc-pool-fast = { workspace = true, optional = true }


[features]
default = ["rbdc-pool-fast", "enable_mysql"]
enable_mysql = ["rbdc-mysql"]
enable_postgres = ["rbdc-pg"]