[package]
name = "next-web-data-mongodb"
version = "0.1.0"
edition = "2024"

[dependencies]
next-web-core = { workspace = true }
next-web-macros = { workspace = true }
rudi-dev = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true}
futures = { workspace = true }

mongodb = { workspace = true }