[package]
name = "next-web-data-redis"
version = "0.1.0"
edition = "2024"
description = "Redis data provider for Next Web Framework"
readme = "README.md"
license.workspace = true

[dependencies]
serde = { workspace = true }
next-web-core = { workspace = true }
rudi-dev = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }


redis = { workspace = true }
rslock = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

[features]
default = []
deadpol = ["deadpool-redis"]
expired-key-listener = []
lock = ["rslock"]
