[package]
name = "rudi-dev"
description = "Rudi - an out-of-the-box dependency injection framework for Rust."
keywords = ["dependency-injection", "ioc", "di", "dependency"]
version = "0.8.7"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rudi-core = { version = "0.1.0" }
rudi-macro-dev = { path = "../rudi-macro-dev" ,version = "0.1.2", optional = true }
inventory = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["rudi-macro-dev", "auto-register"]
auto-register = ["dep:inventory", "rudi-macro-dev/auto-register"]
nothing = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
