[package]
name = "rudi"
description = "Rudi - an out-of-the-box dependency injection framework for Rust."
keywords = ["dependency-injection", "ioc", "di", "dependency"]
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rudi-core = { version = "0.1.0", path = "../rudi-core" }
rudi-macro = { version = "0.1.0", path = "../rudi-macro", optional = true }
inventory = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["rudi-macro", "auto-register"]
auto-register = ["dep:inventory", "rudi-macro?/auto-register"]
nothing = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
